# chat-app

./: Cargo.toml
client/: Cargo.toml
client/Resources/: config.json
client/src/: main.rs
client/src/json_structs/: config.rs
server/: Cargo.toml
server/Resources/: data.json
server/src/: main.rs
